# gym-tracker

./: .dockerignore  .env.example  .env.production.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.garage  Dockerfile.mcp  Dockerfile.minio  LICENSE  README.md  compose.production.yml  docker-compose.yaml  docker-compose.yml  package-lock.json  package.json  run_mcp.py
apps/api/: pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: a1b2c3d4e5f6_bilingual_exercise_names.py  c3d4e5f6a7b8_drop_profile_fields.py  e5f6a7b8c9d0_session_integrity.py  f6a7b8c9d0e1_drop_measurement_extras.py  g7b8c9d0e1f2_profile_identity.py  h8c9d0e1f2a3_catalog_state.py  i9d0e1f2a3b4_set_targets.py  j0e1f2a3b4c5_disliked_exercises.py  j0e1f2a3b4c5_nullable_weight.py  k1f2a3b4c5d6_nullable_weight.py  l2b3c4d5e6f7_weight_null_or_positive.py
apps/api/app/: main.py  models.py  router.py
apps/api/app/core/: auth.py  config.py  database.py  health.py
apps/api/app/features/: __init__.py
apps/api/app/storage/: s3.py
apps/api/scripts/: bootstrap.py
apps/api/tests/: test_auth.py  test_config.py  test_imports.py  test_schemas.py  test_set_targets.py  test_weight_rules.py
apps/api/tests/api/: test_add_planned_exercise.py  test_delete_planned_exercise.py  test_delete_session.py  test_disliked_exercises.py  test_health.py
apps/api/tests/services/: test_exercise_catalog.py  test_session_access.py  test_session_integrity.py  test_sessions.py
apps/api/tests/storage/: test_s3.py
backend/: __init__.py  main.py  (+12 more)
(+191 files in other folders)
