[project]
name = "gym-tracker-backend"
version = "1.0.0"
requires-python = ">=3.13"
dependencies = [
  "alembic>=1.14",
  "asyncpg>=0.30",
  "fastapi>=0.115",
  "pydantic-settings>=2.7",
  "sqlmodel>=0.0.24",
  "uvicorn[standard]>=0.34",
]

[dependency-groups]
dev = ["httpx>=0.28", "pyright>=1.1.400", "pytest>=8.3", "ruff>=0.11"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "basic"
include = ["app", "scripts", "tests"]
reportArgumentType = false
reportAssignmentType = false
reportAttributeAccessIssue = false
reportGeneralTypeIssues = false

[tool.setuptools.packages.find]
include = ["app*", "scripts*"]
